--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Demo in HTML</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="app"></div>
+
     <script
       src="https://unpkg.com/react@18/umd/react.development.js"
       crossorigin
@@ -17,9 +19,37 @@
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/jsx">
-      const domNode = document.getElementById('app');
-      const root = ReactDOM.createRoot(domNode);
-      root.render(<h1>Develop. Preview. Ship.</h1>);
+      function Header({ title }) {
+        return <h1>{title}</h1>
+      };
+
+      function HomePage() {
+          const names = ["Ada Lovelace", "Grace Hopper", "Margaret Hamilton"];
+
+          const [likes, setLikes] = React.useState(0);
+
+          function handleClick() {
+              setLikes(likes + 1);
+          }
+
+          return (
+              <div>
+                  <Header title="Develop. Preview. Ship." />
+                  <ul>
+                      {names.map((name) => (
+                          <li key={name}>
+                              {name}
+                          </li>
+                      ))}
+                  </ul>
+                  <button onClick={handleClick}>Like ({likes})</button>
+              </div>
+          );
+      }
+
+        const domNode = document.getElementById('app');
+        const root = ReactDOM.createRoot(domNode);
+        root.render(<HomePage />);
     </script>
   </body>
 </html>
