feat: finish up the styling for the page :)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   </div>
                   <div className="nav-cta">
                     <a className="nav-btn" href="#">Contact</a>
-                    <img className="profile-img" src="https://api.dicebear.com/7.x/identicon/png?seed=fasakinhenry" alt="Profile" />
+                    <img className="profile-img" src="https://api.dicebear.com/9.x/open-peeps/svg?seed=Felix?flip=true" alt="Profile" />
                   </div>
                 </div>
               </nav>
@@ -56,7 +56,7 @@
               <main className="container">
                 <header className="site-header">
                   <Header title="Develop. Preview. Ship." />
-                  <p className="lead">A tiny demo showing lightweight UI and responsive layout — minimal, fast, and clear.</p>
+                  <p className="lead">A tiny demo showing lightweight UI and responsive layout - minimal, fast, and clear.</p>
                 </header>
 
                 <section className="content">
