docs: update README.md

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <div className="page">
               <nav className="site-nav">
                 <div className="nav-inner">
-                  <div className="logo">▲ Vercel</div>
+                  <div className="logo">▲ Henqsoft</div>
                   <div className="nav-links">
-                    <a href="#">Products</a>
-                    <a href="#">Docs</a>
-                    <a href="#">Pricing</a>
+                    <a href="https://fasakinhenry.com">Products</a>
+                    <a href="https://fasakinhenry.com">Docs</a>
+                    <a href="https://fasakinhenry.com">Pricing</a>
                   </div>
                   <div className="nav-cta">
-                    <a className="nav-btn" href="#">Contact</a>
+                    <a className="nav-btn" href="https://fasakinhenry.com">Contact</a>
                     <img className="profile-img" src="https://api.dicebear.com/9.x/open-peeps/svg?seed=Felix?flip=true" alt="Profile" />
                   </div>
                 </div>
